@@ -2,6 +2,7 @@
 
 * Removed subclass requirement for adding conditions in Conditions::Base
 * Removed DISTINCT in the select clause, instead called uniq! on the results. PostgreSQL complains about DISTINCT and AR uses uniq! when using :includes, so this is the best option.
+* Converted the return for SQLite's strftime to integer from string. This way day of month, day of year, etc works as expected.
 
 == 1.5.3 released 2008-10-30
 
